# codeforces_virtual_coach

./: .env.example  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  render.yaml  requirements.txt
assets/: app.js  styles.css
backend/: __init__.py  analytics.py  cache.py  cf_client.py  config.py  content_recommender.py  evaluator.py  main.py  models.py  planner.py  recommender.py  services.py
backend/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: cohort_miner.py
tests/: test_analytics.py  test_evaluator.py  test_recommender.py
