[project]
name = "codeforces-virtual-coach"
version = "1.0.0"
description = "A Codeforces analytics and recommendation engine for personalized CP practice."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pydantic==2.10.4",
  "scikit-learn==1.6.1",
  "uvicorn[standard]==0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
